# litemind

./: .flake8  .gitignore  ANALYSIS.md  CLAUDE.md  CONTRIBUTING.md  EXAMPLES.md  LICENSE  MANIFEST.in  Makefile  README.md  TODO.md  __setup.cfg  build.sh  pyproject.toml  run_tests.sh
.codegen/: analysis.codegen.yml  examples.codegen.yml  readme.codegen.yml
.github/workflows/: deploy.yml  package.yml
src/litemind/: __init__.py
src/litemind/agent/: README.md  agent.py  conversation.py  exceptions.py  message.py  message_block.py  message_block_type.py
src/litemind/agent/augmentations/: augmentation_base.py  augmentation_default.py  augmentation_set.py  document.py  hierarchical_document.py
src/litemind/agent/messages/: conversation.py  message.py  message_block.py  message_block_type.py  tool_call.py  tool_use.py
src/litemind/agent/rag/: chromadb_embeddings.py  database.py  prompts.py  rag_agent.py  text_splitting.py  vector_database.py
src/litemind/agent/react/: prompts.py  react_agent.py
src/litemind/agent/test/: test_agent.py  test_conversation.py  test_message.py  test_message_block.py
src/litemind/agent/tests/: test_agent.py  test_agent_advanced.py  test_agent_augmentation.py  test_agent_none_response.py  test_conversation.py  test_message.py  test_message_block.py
src/litemind/agent/tools/: agent_tool.py  base_tool.py  function_tool.py  tool_agent.py  toolset.py
src/litemind/agent/utils/: folder_description.py
src/litemind/apis/: README.md  base_api.py  base_callbacks.py  callback_manager.py  combined_api.py  default_api.py  error_handling.py  exceptions.py  feature_scanner.py  feature_validator.py  model_features.py  model_registry.py
src/litemind/apis/_callbacks/: base_callbacks.py  callback_manager.py  print_callbacks.py
src/litemind/apis/anthropic/: anthropic_api.py
src/litemind/apis/callbacks/: api_callback_manager.py  base_api_callbacks.py  base_callbacks.py  callback_manager.py  print_api_callbacks.py  print_callbacks.py
src/litemind/apis/google/: google_api.py
src/litemind/apis/model_registry/: registry_anthropic.yaml  registry_gemini.yaml  registry_ollama.yaml  registry_openai.yaml
src/litemind/apis/ollama/: ollama_api.py
src/litemind/apis/openai/: openai_api.py  openai_api_key.py
src/litemind/apis/scan_results/: model_features_AnthropicApi_20250604_143059.scan.yaml  model_features_AnthropicApi_20250616_194915.scan.yaml  model_features_GeminiApi_20250607_132332.scan.yaml  model_features_OllamaApi_20250604_145826.scan.yaml  model_features_OpenAIApi_20250605_003155.scan.yaml  model_features_OpenAIApi_20250612_073710.scan.yaml  report_20250604_142132.scan.md  report_20250604_143059.scan.md  report_20250605_003155.scan.md  report_20250607_132332.scan.md  report_20250612_073710.scan.md  report_20250616_194915.scan.md
src/litemind/apis/test/: test_apis.py  test_apis_basics.py  test_apis_describe.py  test_apis_documents.py  test_apis_embeddings.py  test_apis_generate_multimodal.py  test_apis_multimodal_inputs.py  test_apis_text_generation.py
src/litemind/apis/tests/: base_test.py  conftest.py  test_apis_basics.py  test_apis_builtin_tools.py  test_apis_describe.py  test_apis_documents.py  test_apis_embeddings.py  test_apis_generate_multimodal.py  test_apis_multimodal_inputs.py  test_apis_text_generation.py  test_builtin_tool_handling.py  test_callback_manager.py  test_callbacks_with_api.py  test_feature_scanner.py  test_feature_scanner_specifics.py  test_feature_validator.py  test_feature_validator_specifics.py  test_model_registry.py
src/litemind/apis/utils/: chromadb_embeddings.py  convert_image_to_jpg.py  convert_image_to_png.py  document_processing.py  dowload_audio_to_tempfile.py  dowload_document_to_tempfile.py  dowload_image_to_tempfile.py  dowload_video_to_tempfile.py  fastembed_embeddings.py  ffmpeg_utils.py  get_media_type_from_uri.py  json_to_object.py  parse_json_output.py  random_projector.py  read_file_and_convert_to_base64.py  sample_video.py  text_splitting.py  transform_video_uris_to_images_and_audio.py  vector_database.py  whisper_transcribe_audio.py  write_base64_to_temp_file.py
src/litemind/media/: README.md  __init__.py  media_base.py  media_default.py  media_resources.py  media_uri.py
src/litemind/media/conversion/: media_converter.py
src/litemind/media/tests/: test_action.py  test_audio.py  test_code.py  test_document.py  test_file.py  test_image.py  test_json.py  test_media_base.py  test_media_pickle_serialisation.py  test_media_uri.py  test_ndimage.py  test_object.py  test_table.py  test_text.py  test_video.py
src/litemind/media/types/: __init__.py  media_action.py  media_audio.py  media_code.py  media_document.py  media_file.py  media_image.py  media_json.py  media_ndimage.py  media_object.py  media_table.py  media_text.py  media_types.py  media_video.py
src/litemind/rag/: examples.py  faiss_example.py  sample.txt
src/litemind/rag/documents/: document_loader.py
src/litemind/rag/text_splitters/: character_text_splitter.py  code_text_splitter.py  markdown_text_splitter.py  recursive_character_text_splitter.py  text_splitters_base.py
src/litemind/remote/: README.md  __init__.py  client.py  server.py
src/litemind/ressources/: media_resources.py
src/litemind/tools/: README.md  litemind_tools.py
src/litemind/utils/: README.md  convert_image_to_jpg.py  convert_image_to_png.py  document_processing.py  dowload_table_to_tempfile.py  extract_archive.py  extract_thinking.py  fastembed_embeddings.py  ffmpeg.py  ffmpeg_utils.py  file_extensions.py  file_types.py  folder_description.py  free_port.py  get_media_type_from_uri.py  json_to_object.py  json_utils.py  load_table.py  markdown.py  normalise_uri_to_local_file_path.py  parse_json_output.py  pickle_serialisation.py  random_projector.py  read_file_and_convert_to_base64.py  recursive_dict_to_attributes.py  temp_file_manager.py  text_compressor.py  text_file.py  transform_video_uris_to_images_and_audio.py  uri_utils.py  whisper_transcribe_audio.py
src/litemind/workflow/: README.md  task.py
src/notebooks/: demo.ipynb
(+240 files in other folders)
