[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "litemind"
dynamic = ["version"]
description = "A wrapper API around LLM APIs and agentic AI framework"
authors = [{ name = "Loic A. Royer" }]
license = "BSD-3-Clause"        # SPDX
readme = "README.md"
requires-python = ">=3.10"
keywords = ["llm", "ai", "agents", "wrapper"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    # LLM API providers
    "openai>=2.16.0",
    "ollama>=0.6.1",
    "anthropic>=0.76.0",
    "google-genai>=1.60.0",
    # Core utilities
    "pillow>=10.0.0",
    "arbol>=2026.2.1",
    "ansicolors",
    "json-repair",
    "tiktoken",
    # Data handling
    "pydantic>=2.0.0",
    "pandas>=2.1.4",
    "numpy>=1.26.0",
    # File/format handling
    "chardet",
    "pyyaml",
    "absl-py",
    "scipy",
    "filetype",
    "python-magic",
]

[project.optional-dependencies]
dev = [
    "hatch",
    "pytest",
    "pytest-html",
    "pytest-cov",
    "black[jupyter]",
    "flake8",
    "mypy",
    "isort",
    "pypdf",
]
build = [
    "hatch",
    "build",
]
rag = ["fastembed", "chromadb", "qdrant-client"]
whisper = ["openai-whisper"]
documents = ["pymupdf", "pymupdf4llm", "openpyxl", "docling", "python-minifier"]
tables = ["tabulate"]
videos = ["ffmpeg-python", "imageio[ffmpeg]"]
audio = ["soundfile"]
remote = ["rpyc"]
tasks = ["md2pdf"]

[project.urls]
Homepage = "https://github.com/royerlab/litemind"
Issues = "https://github.com/royerlab/litemind/issues"

[tool.hatch.version]
path = "src/litemind/__init__.py"

# Only sdists: keep include/exclude here
[tool.hatch.build.targets.sdist]
ignore-vcs = true
include = ["**", "README.md", "LICENSE"]
exclude = [
    "**/tests/**",
    "**/.DS_Store",
    "*.egg-info",
    "**/sandbox/**",
    "src/litemind/ressources/**",
]

# Wheel-only file selection
[tool.hatch.build.targets.wheel]
packages = ["src/litemind"]
exclude = [
    "**/tests/**",
    "**/test_*",
    "**/ressources/**",
    "**/__pycache__/**",
    "**/.DS_Store",
]

[project.scripts]
litemind = "litemind.tools.litemind_tools:main"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
markers = [
    "unit: marks tests as unit tests (fast, no external deps)",
    "integration: marks tests requiring external APIs",
    "slow: marks tests that take more than 5 seconds",
]

[tool.hatch.envs.default]
extra-dependencies = [
    "black[jupyter]",
    "isort",
    "flake8",
    "mypy",
]

[tool.hatch.envs.ci-test]
extra-dependencies = [
    "pytest",
    "tifffile",
    "tabulate",
]

[tool.hatch.envs.hatch-test]
addopts = "--html=reports/report.html --self-contained-html --cov=src --cov-report=html:reports/coverage"
default-args = ["src/"]
exclude = ["sandbox"]
extra-dependencies = [
    "qdrant-client", "chromadb", "openai-whisper", "pymupdf",
    "pymupdf4llm", "openpyxl", "docling", "pandas", "numpy",
    "chardet", "tabulate", "fastembed", "ffmpeg-python",
    "imageio[ffmpeg]", "pytest-html", "pytest-cov",
    "pypdf", "soundfile", "filetype", "tifffile",
    "python-magic", "python-minifier", "rpyc", "md2pdf"
]
